[package]
name = "pixel-font"
version = "0.1.0"
authors = ["gorg <gorgmakesthings@gmail.com>"]
edition = "2018"
autotests = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

